# VTok

./: README.md  pyproject.toml
src/vtok/: __init__.py  cli.py  config.py  feature_extractor.py  framework.py  motion_encoder.py  projection.py  spatial_encoder.py  tokeniser.py  train.py  utils.py
src/vtok/data/: __init__.py  dataset.py
